# SerialPy

./: .gitignore  README.md  pyproject.toml  searchDict.py  test_api.yaml
.github/workflows/: python-package.yml
serialpy/: __init__.py
tests/examples/: example.json  example.toml
